Bug 1193930 - Allow the user to start a pinch while an overscroll animation is still in progress. r=kats